Complete chat implementation with socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
+							<option value="Room for me and Miss Leo">Room for me and Miss Leo</option>
+							<option value="Room for generally dumb People">Room for generally dumb People</option>
+							<option value="Room for people who cant open bottlecap">Room for people who cant open bottlecap</option>
+							<option value="Room for i hate Recheal Club">Room for i hate Recheal Club</option>
+							<option value="Ruby">Nodejs</option>
 							<option value="Java">Java</option>
 						</select>
 					</div>
